--- a/index.html
+++ b/index.html
@@ -136,9 +136,7 @@
     <div class="container fade-scale">
         <h1 class="title">Sequarius</h1>
         <h5 class="subtitle">
-            
-                A guy without story
-            
+		个人技术分享
         </h5>
     </div>
 
